--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -192,9 +192,8 @@ nav:
           - Geniune Token Verification: dev/tokens/standards/eip21.md
           - Auction Contract: dev/tokens/standards/eip22.md
           - Artwork Contract: dev/tokens/standards/eip24.md
-      - Addresses: 
-        - dev/wallet/address.md
-        - Address Encoding: assets/py/Ergo_Address_Encoding.ipynb
+      - Addresses: dev/wallet/address.md
+        ##- Address Encoding: assets/py/Ergo_Address_Encoding.ipynb
       - Transactions: 
         - dev/protocol/transactions.md
         - Model Transaction: dev/protocol/tx/model-tx.md
@@ -335,22 +334,24 @@ nav:
           - Tutorial: dev/stack/appkit/tutorial.md
           - Gradle: dev/stack/appkit/gradle.md
           - Using Appkit from Python: dev/stack/appkit/appkit_py.md
-        - RustKit: dev/stack/rustkit.md
+        - SigmaRust: dev/stack/sigma-rust.md
         - Fleet (JS): dev/stack/fleet.md
-        - Mosaik: 
-          - dev/stack/mosaik/intro.md
-          - Tutorial:
+        - Others:
+          - RustKit: dev/stack/rustkit.md
+          - Mosaik: 
             - dev/stack/mosaik/intro.md
-            - A simple UI: dev/stack/mosaik/tutorial2.md
-            - Processing data: dev/stack/mosaik/tutorial3.md
-            - ErgoPay: dev/stack/mosaik/tutorial4.md
-            - Web UI: dev/stack/mosaik/tutorial5.md
-            - Deployment: dev/stack/mosaik/mosaik-docker-flux.md
-            - Example apps: dev/stack/mosaik/examples.md
-        - JSON dApp Environment: dev/stack/jde.md
-        - Headless dApp Framework: 
-          - dev/stack/headless.md
-          - Modules: dev/stack/headless/modules.md
+            - Tutorial:
+              - dev/stack/mosaik/intro.md
+              - A simple UI: dev/stack/mosaik/tutorial2.md
+              - Processing data: dev/stack/mosaik/tutorial3.md
+              - ErgoPay: dev/stack/mosaik/tutorial4.md
+              - Web UI: dev/stack/mosaik/tutorial5.md
+              - Deployment: dev/stack/mosaik/mosaik-docker-flux.md
+              - Example apps: dev/stack/mosaik/examples.md
+          - JSON dApp Environment: dev/stack/jde.md
+          - Headless dApp Framework: 
+            - dev/stack/headless.md
+            - Modules: dev/stack/headless/modules.md
         
         
       - Libaries:
@@ -362,34 +363,34 @@ nav:
       - Interpreters:
         - dev/stack/interpreters.md
         - sigmastate-interpreter: dev/scs/sigmastate-interpreter.md
-        - SigmaRust: dev/stack/sigma-rust.md
+        
       #- Bookmarks: dev/start/resources.md
     - Smart Contracts:
       - Smart Contracts: dev/scs/index.md
-      - ErgoScript: 
-        - dev/scs/ergoscript.md
-        - Overview: 
-          - dev/scs/ergoscript.md
-          - Quick Primer: dev/scs/ergoscript-primer.md
-          - Creating a simple P2S app: dev/scs/p2s.md
-        - Tooling:
-          - Debugging: dev/scs/debugging.md
-          - FlowCards: dev/scs/flowcards.md
-          - ErgoScala: dev/stack/ergoscala.md
-          - Compiler: dev/stack/compiler.md
-          - Kiosk: dev/stack/kiosk.md
       - Sigma Language:
         - dev/scs/sigma-lang.md
-        - Language Description: 
-          - dev/scs/sigma/lang-spec.md
-          - Simple Syntax: dev/scs/syntax.md
-          - Sigma Propositions: dev/scs/sigma/sigma-prop.md
-          - The Blockchain context: dev/scs/blockchain-context.md
-          - Accessing boxes and registers: dev/scs/boxes-and-registers.md
-          - Global Functions: dev/scs/global-functions.md
-          - Language Operations: dev/scs/sigma/lang-ops.md
         - Data Structures:
           - AVL Trees: dev/protocol/avl.md
+        - ErgoScript: 
+          - dev/scs/ergoscript.md
+          - Overview: 
+            - dev/scs/ergoscript.md
+            - Quick Primer: dev/scs/ergoscript-primer.md
+            - Creating a simple P2S app: dev/scs/p2s.md
+          - Language Description: 
+            - dev/scs/sigma/lang-spec.md
+            - Simple Syntax: dev/scs/syntax.md
+            - Sigma Propositions: dev/scs/sigma/sigma-prop.md
+            - The Blockchain context: dev/scs/blockchain-context.md
+            - Accessing boxes and registers: dev/scs/boxes-and-registers.md
+            - Global Functions: dev/scs/global-functions.md 
+            - Language Operations: dev/scs/sigma/lang-ops.md
+          - Tooling:
+            - Debugging: dev/scs/debugging.md
+            - FlowCards: dev/scs/flowcards.md
+            - ErgoScala: dev/stack/ergoscala.md
+            - Compiler: dev/stack/compiler.md
+            - Kiosk: dev/stack/kiosk.md
         - ErgoTree: 
           - dev/scs/ergotree.md
           - Introduction: dev/scs/ergotree/ergotree-intro.md
