fixing up text (multi/eutxo) and fixing syntax h

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,7 +75,7 @@ plugins:
 
 
 markdown_extensions:
-  - pymdownx.superfences
+  - codehilite
   - extra
   - tables
   - neoteroi.cards
@@ -84,6 +84,7 @@ markdown_extensions:
   - toc:
         permalink: "#"
   - admonition
+  - pymdownx.inlinehilite
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
@@ -559,6 +560,11 @@ nav:
         - Transaction Chains: dev/scs/tx/tx-chains.md
         - Transaction Trees: dev/scs/tx/tx-tree.md
         - Transaction Graphs: dev/scs/tx/tx-graphs.md
+        - Context Enrichment: dev/scs/tx/context-enrichment.md
+        - Examples:
+          - Reversible Address: dev/scs/tx/reversible-address.md
+          - Rock/Paper/Scissors: dev/scs/tx/rock-paper-scissor.md
+          - ICO: dev/scs/tx/ico.md
       #- Data Inputs: dev/scs/data-inputs.md
        
       
