--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -294,7 +294,7 @@ nav:
 
   - Developers: 
     - dev/start.md
-    - Tutorials: dev/tutorials.md
+    - ⭐️ Tutorials: dev/tutorials.md
     - Anatomy of Ergo:
       - Box: 
         - dev/data-model/box.md
